apps/system/storage/tofu-sync/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tofu-sync
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
